# linera-summer-school-2023

./: Cargo.toml
src/: contract.rs  lib.rs  service.rs  state.rs
tests/: cross_chain_tests.rs
