[package]
name = "fungible"
version = "0.1.0"
authors = ["Linera <contact@linera.io>"]
edition = "2021"

[features]
test = []


[dependencies]
async-graphql = { version = "5.0.7" }
async-trait = "0.1.58"
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = { version = "0.2.0", path = "../../Linera/linera-protocol/linera-sdk" }
linera-views = { version = "0.2.0", path = "../../Linera/linera-protocol/linera-views" }
log = "0.4.19"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"

[dev-dependencies]
linera-sdk = { version = "0.2.0", path = "../../Linera/linera-protocol/linera-sdk", features = ["test"] }
webassembly-test = "0.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { version = "0.2.0", path = "../../Linera/linera-protocol/linera-sdk", features = ["test", "wasmer"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "fungible_contract"
path = "src/contract.rs"

[[bin]]
name = "fungible_service"
path = "src/service.rs"
